Hide inputElements during enter_name screen

--- a/contaePages/naContae10.html
+++ b/contaePages/naContae10.html
@@ -7,18 +7,18 @@
     </head>
     <div id="mapdata">
 
-88888888888888888888888~ttttttttt~~~~~tttttttttt~~~~~~~~tttttt~~~~~~~~
-888888888888888888888z..........ttttttt........tttttttttt....tt~~~~~~~
-8888888887888888888z...............~.......Y.....~~~~..........tt~~~~~
-888888888888888888z.............................................tt~~~~
-88888880888888888888888...............rrrrrrrrr...........O.......tt~~
-88898888888887888888888rr..........rrrr.......rrrrrrrr...rrrrrrrrrrt~~
-8888808888888888888888z.rrrrrrrrrrrr.......U.........rrrrr.........t~~
-88888888888888888888888z...........***...................***.......t~~
-888888888888088888888888z..........^^****^^^^^^^MMMM^.***..........ttt
-8888888888888888888878888z.....^^^^^^^MM********MMM^***..............t
-88888888888898888888888888z.^^^^QMMMMMMMMMMM^^^****.*................t
-88888888888888888888889088z^^^^MMMMMMM^^^^^^^^....***................t
+88888888888888888888888~HHHHHHHHH~~~~~HHHHHHHHHH~~~~~~~~HHHHHH~~~~~~~~
+888888888888888888888z...........HHHHH..........HHHHHHHH......J~~~~~~~
+8888888887888888888z...............~.......Y.....~~~~..........JJ~~~~~
+888888888888888888z.............................................JJ~~~~
+88888880888888888888888...............rrrrrrrrr...........O.......JJ~~
+88898888888887888888888rr..........rrrr.......rrrrrrrr...rrrrrrrrrrJ~~
+8888808888888888888888z.rrrrrrrrrrrr.......U.........rrrrr.........J~~
+88888888888888888888888z...........***...................***.......J~~
+888888888888088888888888z..........^^****^^^^^^^MMMM^.***..........JJJ
+8888888888888888888878888z.....^^^^^^^MM********MMM^***..............J
+88888888888898888888888888z.^^^^QMMMMMMMMMMM^^^****.*................J
+88888888888888888888889088z^^^^MMMMMMM^^^^^^^^....***................J
 88888888888888888887888888z^^MMM^^^^^^^............**...............88
 8888888888888888888888888z.^M^^..rrrrrrrrrr......E..**..~~~I......~888
 888888988888888888888z..........rr........rrrrrrrrrrrrr~~~~......~8888
