--- a/contaePages/naContae5.html
+++ b/contaePages/naContae5.html
@@ -23,13 +23,13 @@ xxxxxxxxxxxxxxxxxxxx..........................*....88888887888888888
 xxxxxxxxxxxxxxxxxxx...........................*.....8888888888888888
 xxxxxxxxxxxxx...............................8888.....888888887888888
 xxxxxxxxxxxx..............................888*888.......878888888888
-xxxxxxxxxx........rrrrr....rrrrrr........888*8888......8888888888888
-xxxxxxxx......rrrrr...rrrrr......rr.....888*888888.....8888888888888
-xxxxxx..rrrrrrr......^...^........rrrrrr8888887888888887888788888888
-xxrrrrrrr..........^^.^............^.....888788888898888888888888888
-rrrxxxx..............^..^................888888788888888888888888888
+xxxxxxxxxx.......rrrrrr....rrrrrrr.....QQ888*8888......8888888888888
+xxxxxxxx.....rrrrrr...rrrrrr.....rr..QQQ888*888888.....8888888888888
+xxxxxx.rrrrrrrr......^...^........rrrrrr8888887888888887888788888888
+xxrrrrrrr..........^^.^............^..QQQ888788888898888888888888888
+rrrxxxx..............^..^..............QQ888888788888888888888888888
 xxxxx...........^...^.....^M.^....^........8888888888887888888888888
-xxxx...........^...^.....^..^..^...^.^........8888888888888888888888
+xxxx...........^...^.....^..^..^...^.^........888W888888888888888888
 xxxx..........^..^^.....^.M^..^^.^...^............888788888898888888
 xxxxx........^..............^.M...M^^^..^........8888888888888888888
 xxxxx.....................^..^..^M^^^^M^^^.......8889888888888888888
