add talkies to naContae.html/inputLabel

--- a/naContae.html
+++ b/naContae.html
@@ -31,13 +31,16 @@
                 </div>
             <div id="middle-panel">
 
-
                 <p id="output"></p>
                 <p id="output2"></p>
-                    <input id="inputName" type="text" placeholder="imreoir a h-aon" onfocus="this.placeholder = ''">
-                    <br/>
-                <label id= "inputLabel"><span title='is my name'>is ainm dom</span></label> 
-                <br/><button id="ainmBtn"><i class="fa fa-check"></i></button>
+                <div id="tidyBox1">
+
+                    <div id="portrait"></div>
+                        <input id="inputName" type="text" placeholder="imreoir a h-aon" onfocus="this.placeholder = ''">
+                        <br/>
+                    <label id= "inputLabel"><span id='is my name'>is ainm dom</span></label> 
+                    <br/><button id="ainmBtn"><i class="fa fa-check"></i></button>
+                    </div>
                 <div id="inputElements">
                 <div id="countyMain"></div>
                         <button id="btnLvR"><i class= "fa fa-arrow-right" aria-hidden="true"></i></button>
