--- a/contaePages/naContae1.html
+++ b/contaePages/naContae1.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-xxxxxrrrrr.....xxxxxxxxxxx..xxrxxxxx~~xxxxxxxxxxxxxxxx....xxxxxxxxxx
-xxxrrrr..........Uxxxxxxx....rr.xxxxx~xxxxxxxxxxxxx.........xxxxxxxx
-xxrrr..W...........*xxx.....rr........~~....xxxx..............xxxxxx
-xrrr........*......**......rr.....*....~~.....x.................xxxx
-xrr.........**......**...rrr....***.....~~...................P....xx
+xxxxFrrrrr.....xxxxxxxxxxx..xxrxxxxx~~xxxxxxxxxxxxxxxx....xxxxxxxxxx
+xxxFrrr..........Uxxxxxxx....rr.xxxxx~xxxxxxxxxxxxx.........xxxxxxxx
+xxFrr..W...........*xxx.....rr........~~....xxxx..............xxxxxx
+xFrr........*......**......rr.....*....~~.....x.................xxxx
+Frr.........**......**...rrr....***.....~~...................P....xx
 rrr..........**......*rrrr..*****........~~............~~~~~~~~~~~~~
 r.............**.rrrrrr******.............~.....~~~~~~~~...........x
 .....Q......rrrrrr...***..***..........~~~~~~~~~~..................x
