Create crossBorder alert msg for testing border ASCII characters

--- a/contaePages/naContae1.html
+++ b/contaePages/naContae1.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-xxxxFrrrrr.....xxxxxxxxxxx..xxrxxxxx~~xxxxxxxxxxxxxxxx....xxxxxxxxxx
-xxxFrrr..........Uxxxxxxx....rr.xxxxx~xxxxxxxxxxxxx.........xxxxxxxx
-xxFrr..W...........*xxx.....rr........~~....xxxx..............xxxxxx
-xFrr........*......**......rr.....*....~~.....x.................xxxx
-Frr.........**......**...rrr....***.....~~...................P....xx
+xxxxDrrrrr.....xxxxxxxxxxx..xxrxxxxx~~xxxxxxxxxxxxxxxx....xxxxxxxxxx
+xxxDrrr..........Uxxxxxxx....rr.xxxxx~xxxxxxxxxxxxx.........xxxxxxxx
+xxDrr..W...........*xxx.....rr........~~....xxxx..............xxxxxx
+xDrr........*......**......rr.....*....~~.....x.................xxxx
+Drr.........**......**...rrr....***.....~~...................P....xx
 rrr..........**......*rrrr..*****........~~............~~~~~~~~~~~~~
 r.............**.rrrrrr******.............~.....~~~~~~~~...........x
 .....Q......rrrrrr...***..***..........~~~~~~~~~~..................x
