Change GUI layout. Shorten Manifesto.

--- a/contaePages/naContae1.html
+++ b/contaePages/naContae1.html
@@ -6,37 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-xxxxDrrrrr.....xxxxxxxxxxx..xxrxxxxx~~xxxxxxxxxxxxxxxx....xxxxxxxxxx
-xxxDrrr..........Uxxxxxxx....rr.xxxxx~xxxxxxxxxxxxx.........xxxxxxxx
-xxDrr..W...........*xxx.....rr........~~....xxxx..............xxxxxx
-xDrr........*......**......rr.....*....~~.....x.................xxxx
-Drr.........**......**...rrr....***.....~~...................P....xx
+xxxxDrrrrrFFFFFFFFFxxxxxxFFFFFrFFxxx~~xxxxxxxxxxxxxFFFFFFFGGxxxxxxxx
+xxxDrrr..........UFFxxxFF....rr.FFFFF~FFFFFFxxxxFFF.........GGxxxxxx
+xxDrr..W...........*FFF.....rr........~~....FFxF..............GGxxxx
+xDrr........*......**......rr.....*....~~.....F.................GGxx
+Drr.........**......**...rrr....***.....~~...................P....GG
 rrr..........**......*rrrr..*****........~~............~~~~~~~~~~~~~
-r.............**.rrrrrr******.............~.....~~~~~~~~...........x
-.....Q......rrrrrr...***..***..........~~~~~~~~~~..................x
-x.......rrrrr.*....***......**~~~~~~~~~~.........................xxx
-xx...rrrr.....**..**....~~~~~~~...................................Tx
-xx.rrr........**~~~~~~~~~.....**................................xxxx
-xrrr...~~~~~~~~~~..............****...........................xxxxxx
-~~~~~~~~.....**......^.........xx..*..Y.....xxxxx...R.......xxxxxxxx
-............**.....^^^..........xxx.*......xxxxxxx........xxxxxxxxxx
-x...........**.....^.^..........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xx...........**....^^^^.....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxx...........*...^^^^^^.....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxx.........**.^^^^^.........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxx..E........**.............xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxx..........................xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxx..........................xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxx..........................xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxx..............xxxxx....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxx............xxxxxxxx..xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxx.I........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxx........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxx......xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xx...xx......xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxx.........xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxx....O.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxx.....xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+r.............**.rrrrrr******.............~.....~~~~~~~~...........H
+.....Q......rrrrrr...***..***..........~~~~~~~~~~..................H
+L.......rrrrr.*....***......**~~~~~~~~~~.........................HHx
+xL...rrrr.....**..**....~~~~~~~...................................TH
+xL.rrr........**~~~~~~~~~.....**................................HHHx
+Lrrr...~~~~~~~~~~..............JJ**...........................HHxxxx
+~~~~~~~~.....**......^........JxxJ.*..Y.....JJJJJ...R.......HHxxxxxx
+K...........**.....^^^.........JxxJ.*......JxxxxxJ........JJxxxxxxxx
+K...........**.....^.^.......JJJxxxJJJJJJJJxxxxxxxJJJJJJJJxxxxxxxxxx
+xK...........**....^^^^.....Jxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxK...........*...^^^^^^.....JJxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxKK.........**.^^^^^.........Jxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxK..E........**.............Jxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxK..........................Jxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxK..........................Jxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxK..........................Jxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxK..............KKKKK....JJxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxK............KxxxxxKK..Jxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxK.I........KxxxxxxxxKKxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxK........KKxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxKKKxxK......Kxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xK...KK......Kxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxK.........Kxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxKK....O.Kxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxKKKKKKKxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
     </div>
 
       <body>
