--- a/contaePages/naContae21.html
+++ b/contaePages/naContae21.html
@@ -6,37 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx....xxxxxxxxxxxxxxxxxxxxxxxxxxxxx        
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx....^^^..xxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx....^^^^...xxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...^^^^^.....xxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx......^^^^^..^...xxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxx........^^^^^^^^..^......xxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxx......^..^.^^^^^^^^..........xxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxx......^^^^^^^^..^^^.....^^......xxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxx.....^^^^...^^^^^...^^^^^........*...xxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxE............^^^..^^^^^..........**.......xxxxxx
-xxxxxxxxxxxxxxxxxxx.........^^^^rrrr^^^^^.......I...**..........xxxx
-xxxxxxxxxxxxxxxxxx........rrrrrrr..rrrrrrrrrrr....***............xxx
-xxxxxxxxxxxxxxxx..R....rrr....................rrrr*..............xxx
-xxxxxxxxxxxxxxxx.....rr.........................**rrrrrrrrrrrxxxxxxx
-xxxxxxxxxxxxxx..Y..Tr..........................**........xxxxxxxxxxx
-xxxxxxxxxxxxx......r........................****.......xxxxxxxxxxxxx
-xxxxxxxxxxxx.......~Q...................*****.......xxxxxxxxxxxxxxxx
-xxxxxxxxxx.........~.....W.............**.........xxxxxxxxxxxxxxxxxx
-xxxxxxxxxx........~~.................***..........xxxxxxxxxxxxxxxxxx
-xxxxxxxxx..P......~.....Y...........**.............xxxxxxxxxxxxxxxxx
-xxxxxxxxx........~~.................*.............xxxxxxxxxxxxxxxxxx
-xxxxxxxxx........~.r...............**............xxxxxxxxxxxxxxxxxxx
-xxxxxxxxx........~.r...........U..**..........xxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxx.......~.rr.............*..........xxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxx......~~~r...........***........xxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxx...~~~~......~~~*........xxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxx.....~~~..~~~*~~~~~~~~~~xxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxx......~~~~.**......xxx~~~~xxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxx.........**....xxxxxxxxx~~~~xxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxx.....O.*....xxxxxxxxxxxxx~~~~~xxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxx.*xxxxxxxxxxxxxxxxxxxxx~xxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxDDDFFFFxxxxxxxxxxxxxxxxxxxxxxxxxxxx       
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxD....^^^FFFxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxHHrrrDxxxxxxxxxxxxxxDD.........FFFxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxHrrrrDDxxxxxxxxxxxDDD...^^^^^.....Fxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxHrrrrDxxxxxxDDDD......^^^^^..^...FFFFxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxHrrrDDxxxxD........^^^^^^^^..^......FFFxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxHrrrrDxDD......^..^.^^^^^^^^..........Fxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxHrrrrD......^^^^^^^^..^^^.....^^......FFFFxxxxxxxxxx
+xxxxxxxxxxxxxxxHrrrrD.....^^^^...^^^^^...^^^^^........*...FFFFxxxxxx
+xxxxxxxxxxxxxxxHHrrrE............^^^..^^^^^..........**.......FFxxxx
+xxxxxxxxxxxxxxHrrrr.........^^^^rrrr^^^^^.......I...**..........Fxxx
+xxxxxxxxxxxxxHrrrr........rrrrrrr..rrrrrrrrrrr....***..........~~~~~
+xxxxxxxxxxxxHrrr..R....rrr....................rrrr*.........rrr~~~~x
+xxxxxxxxxxxHrrrr.....rr.........................**rrrrrrrrrrrGGGGxxx
+xxxxxxxxxxHrrr..Y..Tr..........................**........GGGxxxxxxxx
+xxxxxxxxxHrrr......r........................****.......GGxxxxxxxxxxx
+xxxxxxxxHrrr......r.Q...................*****.......GGGxxxxxxxxxxxxx
+xxxxxxxHrr........r......W.............**..........Gxxxxxxxxxxxxxxxx
+xxxxxxHrrr........r..................***..........Gxxxxxxxxxxxxxxxxx
+xxxxxHrrr..P.......r....Y...........**.............Gxxxxxxxxxxxxxxxx
+xxxxxHrrr..........r................*.............Gxxxxxxxxxxxxxxxxx
+xxxxxHrrr.........r................**............Gxxxxxxxxxxxxxxxxxx
+xxxxxHrrr.........r............U..**..........GGGxxxxxxxxxxxxxxxxxxx
+xxxxxHrrrr........r...............*..........Gxxxxxxxxxxxxxxxxxxxxxx
+xxxxH~~~~rr.......r.............***........GGxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxHH~~~~~~~~~..r..........~~~*.........Gxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxHHH~~~~~~r~~~r...........~*~~~~~~~~~~Gxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxH~~~~~~~~~~~~~~...........**......GGG~~~~xxxxxxxxxxxxxxxxxxxxxxxx
+xxH~~~~~~~~~~~~~~~~.........**....GGGxxxxxx~~~~xxxxxxxxxxxxxxxxxxxxx
+xxxH~~~~~~~~~~~~~~~~~.....O.*....Gxxxxxxxxxxxx~~~~~xxxxxxxxxxxxxxxxx
+xxxH~~~~~~~~~~~~~~~~~~GGGGGGGGGGGxxxxxxxxxxxxxxxxx~xxxxxxxxxxxxxxxxx
 
     
     </div>
