--- a/contaePages/naContae22.html
+++ b/contaePages/naContae22.html
@@ -6,36 +6,36 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-8888888887889888888z...~~~~.......888888888xxxxxxxxxxxxxxxxxxxxxxxxx
-88888z...88.88898888z..........^^...888888xxxxxxxxxxxxxxxxxxxxxxxxxx
-888z.......88z....8zE.....^^R^^^^^....888xxxxxxxxxxxxxxx....xxxxxxxx
-8z....88898.z...........^^^^^^^.^^..T888xxxxxxxxxxxxxxxxx....xxxxxxx
-8z..W8888878z..8.....rr.^^***^^^.888888xx..xxxxxxxxxxx.........xxxxx
-88888888898z...7....rrr****^*^...88888......xxxxxxx~............xxxx
-8888..8888878878z..*****^^^.***..*****.....xxxxx.................xxx
-.....8888888z...8***....^^....****rrr*****O..****.......xxxxxxP..xxx
-z....8.888z......**...^^^^^^^^^...rrrrr..*****.........xxxxxxxxxxxxx
-8z..Q..888........***..^^^^^^^^^^..rrrrrr...*..............xxxxxxxxx
-8z..8...88z.........*...^^^^^^^^^^^^rrrrrr..***............xxxxxxxxx
-88z.8..8.88988888z....^^^^^^^^^.^^^^^.^.......**............xxxxxxxx
-8888888888888888888z..^^^^^^....^^^.^^^..rrr^..***.............xxxxx
-8888888888888888788z..^^..8..............rrr^^^..*............xxxxxx
-8888888988888898888z....898z.............^^^^^^^.**..........xxxxxxx
-888888888888888889888788888z.I...........^^^^^^^^.***......xxxxxxxxx
-888888z..88888888888888897888z.**................**........xxxxxxxxx
-88888z....888888z......8888z....****...rrrr....***.........xxxxxxxxx
-888888788888z..................^**^***rrrrr****.............xxxxxxxx
-88888888888z................^****^^^^*******..**................xxxx
-8888888788z..............^^***^r^^^^rrrr.......*...............xxxxx
-88888898888z............^^^*^^rr^^^rrrrr.......*..............xxxxxx
-888888888888z...........^^^^rrrr^^^rrrr........................xxxxx
-8888888878888z............U..rr^^^^^...Y......................xxxxxx
-8888zxxx888788z.............rrr.~.rr^^^......................xxxxxxx
-88888zxxxxxxxxxxxx......xxxxrr..~~rr.......................xxxxxxxxx
-888zxxxxxxxxxxxxxxxxxxxxxxxxxx.....rr..................xxxxxxxxxxxxx
-8zxxxxxxxxxxxxxxxxxxxxxxxxxxxx..........T........xxxxxxxxxxxxxxxxxxx
-88zxxxxxxxxxxxxxxxxxxxxxxxxx...................xxxxxxxxxxxxxxxxxxxxx  
-88zx8xxxxxxxxxxxxxxxxxxxxxxxx................xxxxxxxxxxxxxxxxxxxxxxx    
+8888888887889888888z88888888888888888888888xxxxxxxxxxxxxxxxxxxxxxxxx
+88888z...88.88898888z..........^^...888888xxxxxxxxxxxxxxDDDDxxxxxxxx
+888z.......88z....8zE.....^^R^^^^^....888xxxxxxxxxxxxxxD....Dxxxxxxx
+8z....88898.z...........^^^^^^^.^^..T888xDDxxxxxxxxxxxDD.....DDxxxxx
+8z..W8888878z..8.....rr.^^***^^^.888888DD..DxxxxxxxDDD.........Dxxxx
+88888888898z...7....rrr****^*^...88888......DxxxDDD~............Dxxx
+8888..8888878878z..*****^^^.***..*****.......DDD.........FFF.....Dxx
+.....8888888z...8***....^^....****rrr*****O..****.......FxxxFFP..DDx
+z....8.888z......**...^^^^^^^^^...rrrrr..*****...........FFxxxFFFFFD
+8z..Q..888........***..^^^^^^^^^^..rrrrrr...*..............FxxxxxxxF
+8z..8...88z.........*...^^^^^^^^^^^^rrrrrr..***............Fxxxxxxxx
+88z.8..8.88988888z....^^^^^^^^^.^^^^^.^.......**............FFFxxxxx
+8888888888888888888z..^^^^^^....^^^.^^^..rrr^..***.............Fxxxx
+8888888888888888788z..^^..8..............rrr^^^..*............Fxxxxx
+8888888988888898888z....898z.............^^^^^^^.**..........Fxxxxxx
+888888888888888889888788888z.I...........^^^^^^^^.***......FFxxxxxxx
+888888z..88888888888888897888z.**................**........Fxxxxxxxx
+88888z....888888z......8888z....****...rrrr....***.........Fxxxxxxxx
+888888788888z..................^**^***rrrrr****.............FFFFxxxx
+88888888888z................^****^^^^*******..**................Fxxx
+8888888788z..............^^***^r^^^^rrrr.......*...............Fxxxx
+88888898888z............^^^*^^rr^^^rrrrr.......*..............Fxxxxx
+888888888888z...........^^^^rrrr^^^rrrr........................Fxxxx
+8888888878888z............U..rr^^^^^...Y......................Fxxxxx
+8888zxxx888788z.............rrr.~.rr^^^......................Fxxxxxx
+88888zxxxxxxxxxGGG......GGGGrr..~~rr.......................FFxxxxxxx
+888zxxxxxxxxxxxxxxGGGGGGxxxxGG.....rr..................GGGGxxxxxxxxx
+8zxxxxxxxxxxxxxxxxxxxxxxxxxxxG..........T........GGGGGGxxxxxxxxxxxxx
+88zxxxxxxxxxxxxxxxxxxxxxxxxG...................GGxxxxxxxxxxxxxxxxxxx  
+88zx8xxxxxxxxxxxxxxxxxxxxxxxGGGGGGGGGGGGGGGGGGGxxxxxxxxxxxxxxxxxxxxx    
     </div>
 
       <body>
