--- a/contaePages/naContae23.html
+++ b/contaePages/naContae23.html
@@ -6,37 +6,37 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxrrxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxx.....rr......xxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxx......rrrrrr....xxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxx...........rrrrrr...xxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxx.........rrrrrrr..........xxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxx...........rr...r..............xxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxx.........r....rr................xxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxx.........rr.***.rr*..................xxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxx.........rr.**...rr***..................xxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxx......rrr..*....rr..*******...............xxxxxxxx
-xxxxxxxxxxxxxxxxxx.......r..........r..rrrrrr******..............xxxx
-xxxxxxxxxxxxxxxxx.......rr.......*..rrr.....rrrr..****.............xx
-xxxxxxxxxxxxxxxxx....rrrrr.......*...rr..^^^...rr....**...........xxx
-xxxxxxx......xxx.................*....rrrr.^^^...r....**.........xxxx
-x................~~~~~~~~......*****........^...rr.....*...........xx
-xx..................~~.......***...***.....^^.rrr.....*...........xxx
-xxx.........................**.......**.^^^^..r.....***..........xxxx
-xxx.......~.................*......^^^*^^.....r....**...........xxxxx
-xx........~...*...................^^^^**^.....r...**...........xxxxxx
-x............**....................^^^^**^....rr.**...........xxxxxxx
-x............*....................^^^^^^***^***rr...........xxxxxxxxx
-xx..........*.....................^^^^^^^^***...rrrr........xxxxxxxxx
-xxx.........*......********......^^^^.^^^**^^......rr.......xxxxxxxxx
-xxxxx.......**....**......***....^^^^^^^**.^^^^...........xxxxxxxxxxx
-xxxxxx.......*...**.........***.......***^^^^^^..........xxxxxxxxxxxx
-xxxxxxx.......****....~~~......**...***.^^^^^.......xxxxxxxxxxxxxxxxx
-xxxxxxxx.......*.....~~~~........****^^^^........xxxxxxxxxxxxxxxxxxxx
-xxxxxxxxx...........~~~~~~~..........^........xxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxx........~~~~~~~~~~~...............xxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxx~......~~~~~~~~~~~~~~...........xxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxx~~....~~~~~~~~~~~~~~~~.......xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxDDDDDrrFFFFFFxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxxDDDDDDrrFFFFFFFFxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxDD......rrrrrr....FFxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxDDDD...........rrrrrr...FFxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxDDD.........rrrrrrr..........FFxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxD...........rr...r..............FFFxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxD..........r....rr................FFFFxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxD.........rr.***.rr*..................FFxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxD.........rr.**...rr***..................FFFxxxxxxxx
+xxxxxxxxxxxxxxxxxxD......rrr..*....rr..*******...............FFFFxxxx
+xxxxxxxxxxxxxxxxxD.......r..........r..rrrrrr******..............FFxx
+xxxxxxxxxxxxxxxxD.......rr.......*..rrr.....rrrr..****.............Fx
+xxxxxxxDDDDDDxxxD....rrrrr.......*...rr..^^^...rr....**...........Fxx
+DDDDDDD......DDD.................*....rrrr.^^^...r....**.........FFxx
+~~~~.............~~~~~~~~......*****........^...rr.....*...........Fx
+~~..................~~.......***...***.....^^.rrr.....*...........Fxx
+~~~.........................**.......**.^^^^..r.....***..........Fxxx
+~~~~......~.................*......^^^*^^.....r....**...........Fxxxx
+~~~~~~....~...*...................^^^^**^.....r...**...........Fxxxxx
+~~~~~~.......**....................^^^^**^....rr.**...........Fxxxxxx
+~~~~~........*....................^^^^^^***^***rr...........FFxxxxxxx
+~~~~~.......*.....................^^^^^^^^***...rrrr........FxxxxxxFF
+~~~~........*......********......^^^^.^^^**^^......rr.......FxxxxxFxx
+x~~~~.......**....**......***....^^^^^^^**.^^^^...........GGxFxxxFxxx
+xx~~~~.......*...**.........***.......***^^^^^^..........GxxxxFxFxxxx
+xxxxxxH.......****....GGG......**...***.^^^^^.......GGGGGxxxxxxFxxxxx
+xxxxxxxH.......*.....GxxG........****^^^^........GGGxxxxxxxxxxxxxxxxx
+xxxxxxxxH...........GxxxxGG..........^........GGGxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxH........GGxxxxxxxGG...............GGxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxH......GxxxxxxxxxxxGG...........GGxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxx~HGGGGGxxxxxxxxxxxxxxGGGGGGGGGGGxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 
     </div>
