--- a/contaePages/naContae24.html
+++ b/contaePages/naContae24.html
@@ -7,36 +7,36 @@
     </head>
     <div id="mapdata">
 
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx.........~.........xxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxx.....^.................xxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxx............********.....xxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxx.........^.**^^.....*.......xxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxx...........**^^^^.....*......xxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxx...............*.^^^^^^....*........xxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxx................*..^^^^^..r..**.......xxxxxxxxxxxxxx
-xxxxxxxxxxxxx.................**...^^^^..rrr.***......xxxxxxxxxxxxxx
-xxxxxxxxxxxxx..............***.....^^....rrr.*.**......xxxxxxxxxxxxx
-xxxxxxxxxxxxx..........****..............rr..*..*......xxxxxxxxxxxxx
-xxxxxxxxxxxxx........**........^...^.....rr..****......xxxxxxxxxxxxx
-xxxxxxxxxxxxx........*........^..^^......rr...........xxxxxxxxxxxxxx
-xxxxxxxxxxxrrrrrrrr...*......^..^.........rr.........xxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxx...rrr.*.....^.^^...^^......rrr.......xxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxx....rrrrrrrr.......^^.........r......xxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxx......**..rrr.....^^................xxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxx.....**^...rr....^^^......*.......xxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxx....^*^^...r..^^^^^.....**......xxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxx.....**^^.....^^^^^^...**......xxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxx....^**^^^....^^^^MM.**......xxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxx.....^**^^^.^^^^^MMM^*......xxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxx......*.*^^^^M^^MMM**......xxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxx.......***^^^^M^MMM*......xxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxx........**^^MMMMM*......xxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxx.......*******.......xxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxx.......^....^.....xxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxx......^..^.....xxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxx....^.......xxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...^...xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx...xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxx~~~~~~~~~~~~~~~~xxxxxxxxxxxxxxxxxxxxxxxD8888888888888888
+xxxxxxxxxxxxxxxx~~~~~~~~~~~~xxxxxxxxxxxxxxxxxxxxxDD..........8888888
+xxxxxxxxxxxxxxxxxFF~~~~~~~~.DDDxxxxxxxxxxxxxxxxxD..............88888
+xxxxxxxxxxxxxFFFFF.......^.**^^DDxxxxxxxxxxxxxxD................8888
+xxxxxxxxFFFFFF...........**^^^^..DDDDxxxxxxDDDD.......8888.......888
+xxxxxxxFF...............*.^^^^^^....*DDDDDD...........888888......88
+xxxFFFF................*..^^^^^..r..**..................888888....88
+xxxF.................**...^^^^..rrr.***..................888888....8
+xxF...............***.....^^....rrr.*.**.................888888....8
+xxF...........****..............rr..*..*.................8888888..88
+xF..........**........^...^.....rr..****................888888888888
+xF..........*........^..^^......rr.....................8888888.88888
+rrrrrrrrrr...*......^..^.........rr...................888888....8888
+xF.......rrr.*.....^.^^...^^......rrr.................88.........888
+xxF........rrrrrrrr.......^^.........r.........................88888
+xxF...........**..rrr.....^^.................................8888888
+xxxF..........**^...rr....^^^......*........................88888888
+xxxF..........^*^^...r..^^^^^.....**......................8888888888
+xxxxF..........**^^.....^^^^^^...**....................8888888888888
+xxxxF..........^**^^^....^^^^MM.**....................88888888888888
+xxxxxF..........^**^^^.^^^^^MMM^*.....................88888888888888
+xxxxxxF..........*.*^^^^M^^MMM**......................88888888888888
+xxxxxxF...........***^^^^M^MMM*.......................88888888888888
+xxxxxxxF8888........**^^MMMMM*.......................888888888888888
+xxxxxxxF888888.......*******........................8888888888888888
+xxxxxxxF88888888.......^....^......................88888888888888888
+xxxxxxxxFG8888888888888888.......................8888888888888888888
+xxxFxxxxFxGGG88888888888888888................8888888888888888888888
+xxFxxFxFxxxxxGGGG8888888888888888888.....888888888888888888888888888
+xxFxxxFxxxxxxxxxxGGGGGGGGGGG8888888888888888888888888888888888888888
     </div>
 
       <body>
