--- a/contaePages/naContae10.html
+++ b/contaePages/naContae10.html
@@ -7,24 +7,24 @@
     </head>
     <div id="mapdata">
 
-88888888888888888888888~HHHHHHHHH~~~~~HHHHHHHHHH~~~~~~~~HHHHHH~~~~~~~~
-888888888888888888888z...........HHHHH..........HHHHHHHH......J~~~~~~~
-8888888887888888888z...............~.......Y.....~~~~..........JJ~~~~~
-888888888888888888z.............................................JJ~~~~
-88888880888888888888888...............rrrrrrrrr...........O.......JJ~~
-88898888888887888888888rr..........rrrr.......rrrrrrrr...rrrrrrrrrrJ~~
-8888808888888888888888z.rrrrrrrrrrrr.......U.........rrrrr.........J~~
-88888888888888888888888z...........***...................***.......J~~
-888888888888088888888888z..........^^****^^^^^^^MMMM^.***..........JJJ
-8888888888888888888878888z.....^^^^^^^MM********MMM^***..............J
-88888888888898888888888888z.^^^^QMMMMMMMMMMM^^^****.*................J
-88888888888888888888889088z^^^^MMMMMMM^^^^^^^^....***................J
-88888888888888888887888888z^^MMM^^^^^^^............**...............88
-8888888888888888888888888z.^M^^..rrrrrrrrrr......E..**..~~~I......~888
-888888988888888888888z..........rr........rrrrrrrrrrrrr~~~~......~8888
-8888888888888888z...............rrr.............^^^.*....~~~...~888888
-88888z^88888z.....................rr......^^MMM^^^.**....~888888878888
-888z^^^8888.......rrrrrrrrrrr.....rr...R^^MMM^^^^***....~8888088888888
+8888xxxxxxxxxxxxxxxxxFFFFFFFFFFFF~~F~FFFFFFFFFFF~~~~~~~~FFFFFG~~~~~~~~
+888xxxxxxxxxxxxxxxxxD............FF.F...........FF...FFF......G~~~~~~~
+8xxxxxxxxxxxxxxxxxxD...............~.......Y......FFF..........GG~~~~~
+xxxxxxxxxxxxxxxxxxD..............................................H~~~~
+xxxxxxxxxxxxxxxxxxD...................rrrrrrrrr...........O.......HH~~
+xxxxxxxxxxxxxxxxxxxD...............rrrr.......rrrrrrrr...rrrrrrrrrrrrr
+8xxxxxxxxxxxxxxxxxxxD...rrrrrrrrrrrr.......U.........rrrrr.........H~r
+xxxxxxxxxxxxxxxxxxxxxD.............***...................***.......H~r
+xxxxxxxxxxxxxxxxxxxxxD.............^^****^^^^^^^MMMM^.***...........HH
+xxxxxxxxxxxxxxxxxxxxxxD........^^^^^^^MM********MMM^***..............H
+xxxxxxxxxxxxxxxxxxxxxxxD....^^^^QMMMMMMMMMMM^^^****.*................H
+xxxxxxxxxxxxxxxxxxxxxxxxD..^^^^MMMMMMM^^^^^^^^....***................H
+xxxxxxxxxxxxxxxxxxxxxxxD....^MMM^^^^^^^............**...............88
+xxxxxxxxxxxxxxxxxxxxxxxD...^M^^..rrrrrrrrrr......E..**..~~~I......~888
+xxxxxx98888xxxxxxDDDDDD.........rr........rrrrrrrrrrrrr~~~~......~8888
+xxx88888xxxxxDDDD...............rrr.............^^^.*....~~~...~888888
+x8888z^DxxxDD.....................rr......^^MMM^^^.**....~888888878888
+888z^^^DDDD.......rrrrrrrrrrr.....rr...R^^MMM^^^^***....~8888088888888
 88z^^^88rrrrrrrrrrr.........rrrrrrr..^^^MMM^^^****......~8888888888888
 8z^^^^...^^^^^^****...............^^^MMMM^^****.......P888888898888888
 8z^^.^^^^^^^^^^^..***^^^......^^^^MMMM^^^***......~8888888889888888888
