--- a/contaePages/naContae26.html
+++ b/contaePages/naContae26.html
@@ -6,21 +6,21 @@
         <link rel="stylesheet" type="text/css" href="tileworld.css">
     </head>
     <div id="mapdata">
-xxxxxxxxxx~~~~~~~~~~xxxxxxxx...........................xxxxxxxxxxxxx
-xxxxxxxxxxx~~~~~~~~~xxxxxxx...............................xxxxxxxxxx
-xxxxxxxxxxx~~~~~~~xxxxxxx................*******............xxxxxxxx
-xxxxxxxx~~~~~~~~xxxxxxx.................**......**...........xxxxxxx
-xxxxxxxx~~~~~......xx..................**........***............xxxx
-xxxxxxxxrr*.....................**....**...........**...........xxxx
-xxxxxxxxrr*....................***....*..........xxx**..........xxxx
-xxxxxxxrr.*....................*.*....*........xxxxxx**........xxxxx
-xxxxxxrr.*....................*..*...*........xxxxxxxx..........xxxx
-xxxxxxrr**.......................*...*.........xxxxxxxx........xxxxx
-xxxxxxrr*.......................**..**..........xxxxxxx.......xxxxxx
-xxxxxxrr*.......................**.**...........x.xxxxxx...x.xxxxxxx
-xxxxxxxrr*.......................***.............xxxxxxxx...xxxxxxxx
-xxxxxxxxrr*...........^..........**......*.....x.xxxxxxxxxxxxxxxxxxx
-xxxxxxxxxrr*......................**....**......xxxxxxxxxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxxxrr...........................xxxxxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxxxrrr...............................xxxxxxxxxx
+xxxxxxxxxxxxxxxxxxxxxxrrr................*******............xxxxxxxx
+xxxxxxxxxxxxxxxxrrrxrrr.................**......**...........xxxxxxx
+xxxxxxxxxxx~~...r..rr..................**........***............xxxx
+xxxxxxxx......rr................**....**...........**...........xxxx
+xxxxxxxx....rr.................***....*..........xxx**..........xxxx
+xxxxxxx...*.r..................*.*....*........xxxxxx**........xxxxx
+xxxxxx...*..rr................*..*...*........xxxxxxxx..........xxxx
+xxxxxx...*...r...................*...*.........xxxxxxxx........xxxxx
+xxxxxx..*....r..................**..**..........xxxxxxx.......xxxxxx
+xxxxxx..*....r..................**.**...........x.xxxxxx...x.xxxxxxx
+xxxxxxx..*...r...................***.............xxxxxxxx...xxxxxxxx
+xxxxxxxx..*.rr........^..........**......*.....x.xxxxxxxxxxxxxxxxxxx
+xxxxxxxxx..rr.....................**....**......xxxxxxxxxxxxxxxxxxxx
 xxxxxxxxxxrr*.....^................*..**.........xxxxxxxxxxxxxxxxxxx
 xxxxxxxxxxxrr**...^...^............****.........xxxxxxxxxxxxxxxxxxxx
 xxxxxxxxxxxxrr**.................................xxxxxxxxxxxxxxxxxxx
